made code more readable by adding functions and added delete functionality

--- a/Java Script learning/Simple ToDo List App/list.html
+++ b/Java Script learning/Simple ToDo List App/list.html
@@ -11,6 +11,7 @@
 <ul>
 	<li>"new" - Add a Todo</li>
 	<li>"List" - List all the Todos</li>
+	<li>"delete" - remove a specifit todo</li>
 	<li>"Quit" - Quit App</li>
 </ul>
 
